--- a/package.json
+++ b/package.json
@@ -11,30 +11,31 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@hapi/joi": "^17.1.0",
+    "@hapi/joi": "^17.1.1",
     "axios": "^0.19.2",
-    "bcrypt": "^4.0.1",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
-    "bunyan": "^1.8.12",
+    "bunyan": "^1.8.14",
     "bunyan-express-serializer": "^1.0.0",
     "chalk": "^3.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-request-id": "^1.4.1",
-    "helmet": "^3.21.3",
+    "helmet": "^3.23.3",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
-    "md5": "^2.2.1",
-    "mongoose": "^5.9.3",
-    "morgan": "^1.10.0"
+    "md5": "^2.3.0",
+    "mongoose": "^5.10.7",
+    "morgan": "^1.10.0",
+    "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
-    "mocha": "^8.1.1",
+    "mocha": "^8.1.3",
     "shelljs": "^0.8.4",
-    "standard": "^14.3.1"
+    "standard": "^14.3.4"
   },
   "husky": {
     "hooks": {
